--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     },
     "configFile": "wwwroot/system.config.js",
     "dependencies": {
+      "angular": "github:angular/bower-angular@^1.5.0",
+      "angular-animate": "github:angular/bower-angular-animate@^1.5.0",
+      "angular-cookies": "github:angular/bower-angular-cookies@^1.5.0",
+      "angular-sanitize": "github:angular/bower-angular-sanitize@^1.5.0",
+      "angular-touch": "github:angular/bower-angular-touch@^1.5.0",
+      "angular-translate": "github:angular-translate/bower-angular-translate@^2.9.2",
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.18",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "lodash": "npm:lodash@^4.0.0",
@@ -24,6 +31,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
